Semver implementation
